--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: composer --version && composer install --prefer-dist --no-progress --no-suggest
+      run: composer update && composer install --prefer-dist --no-progress --no-suggest
     - name: Run batch
       run: php batch.php
       env:
