--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: php-actions/composer@v6
+      with:
+        php_version: 7.1
+        version: 1
 
     - name: Install dependencies
       run: composer update && composer install --prefer-dist --no-progress --no-suggest
