--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    # - uses: actions/checkout@v2
     - uses: php-actions/composer@v6
       with:
         php_version: 7.1
