--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -9,14 +9,14 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
-    # - uses: actions/checkout@v2
-    - uses: php-actions/composer@v6
-      with:
-        php_version: 7.1
-        version: 1
+    - uses: actions/checkout@v2
+    # - uses: php-actions/composer@v6
+    #   with:
+    #     php_version: 7.1
+    #     version: 1
 
     - name: Install dependencies
       run: composer update && composer install --prefer-dist --no-progress --no-suggest
