--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -13,6 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.2.5'
     # - uses: php-actions/composer@v6
     #   with:
     #     php_version: 7.1
